@@ -8,14 +8,14 @@ DIST python-mode-5.1.0.el.bz2 37743 RMD160 df04f1ae210dc1eba4f43d80c4e1cabd930b5
 DIST python-mode-5.2.0.tgz 73566 RMD160 fc6d649f4c85a275b714b2a1ba8fa5cfb13cea7a SHA1 f5a8e8ee5bcfef7df329a99f24106a77fe1e5b7b SHA256 84ee977fb7c639bc96cd4e8db0145c7a182489456e4d95a71c3612258b5013ac
 DIST python-mode.el-6.0.3.tar.gz 134816 RMD160 09a29896fd759ec1d928e4ce922b0a8cbd62a328 SHA1 2aac9464fe9690b00f94c2ea5debf3a5bb1b2884 SHA256 ea58b4aa944ee4c81041b5124cd552800a694b90bed9ba38f5dde673eaad06fa
 EBUILD python-mode-5.1.0.ebuild 806 RMD160 1bbdd57608c0eb850abf5af45e748c1114aedf16 SHA1 e78294debc30267b86a21778b6f0c9083ceabf93 SHA256 f988db73d4cba7d621c2af9ca66a83ad027210a6d7ad9f65c0a80dd9c9fac3d7
-EBUILD python-mode-5.2.0.ebuild 915 RMD160 4e12ccbd7542892538d21f1c95c0b61e296abca1 SHA1 9de7c4876e09656147fbbe38f06622183b35e520 SHA256 8da43bd4cbc6fc9d7133c960aeeecbd6b637e7ca34a58c5c4748cde09f87bbf0
-EBUILD python-mode-6.0.3-r1.ebuild 952 RMD160 b33d8305422f9a27efb2f03c9ca0bcb271182e18 SHA1 9f83c7303688484b54c956e1adb2c5dafd3de958 SHA256 9bd45238138947c1f73725b4ed5e47fa52df127cf96b78b0698337bf05a973ff
-MISC ChangeLog 7002 RMD160 1f27fcee9b576c748822d361452a85215e22e8c8 SHA1 83441b9334daacef3215bf818ea8b84bf6a37a63 SHA256 f6f57d98d48c06f9729669497ac40b66b3f4876a96ac3a5ad28a160bf7182468
+EBUILD python-mode-5.2.0.ebuild 895 RMD160 91b8ae7deec73b21ce5139b14c33db2d4ad41da8 SHA1 19162532cfef5508852f65ef16eab434e3821fb5 SHA256 9addf376fc5a499f8296d320e104d734b08b05083678acef7e169d3fbccbe2a3
+EBUILD python-mode-6.0.3-r1.ebuild 917 RMD160 2e06da03dea9bf87fba1e3da912d91dd5bd0e2a3 SHA1 738b8f2307b95cd3f47c0d108e212e1581002edc SHA256 c46fbef1d9fdd6d6b743116550943adb0353e006723d294e4aaf86572eac515c
+MISC ChangeLog 7169 RMD160 e7ce2cf6ac97692628b0a774585da09a124b2224 SHA1 06d0bee0bfe5c3675c6a4c1b1d90574d7683f7b0 SHA256 f65daf7042d7021a3d31cf592bbe32da60969ed0fc2d760026730251067842c1
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7U+mAACgkQVWmRsqeSphPB6wCfYyoddXoidB0mJ9ZU7YvVPLoz
-1T0AnisQg2BDqm14y6k/JhlguQMyixBn
-=arDi
+iEYEARECAAYFAk7at20ACgkQOeoy/oIi7uzXawCgzrU2TlsNjm2SWBxogHALfDAC
+OsAAn2fYQbyy0y3Divmapql51KdXehD1
+=dtO7
 -----END PGP SIGNATURE-----
